[package]
name = "referral-system"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97" }
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
config = "0.15.16"
dotenvy = "0.15"
serde = { version = "1.0.222" }
serde_json = { version = "1.0.132" }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid"] }
tokio = { version = "1.40.0", features = ["full"]  }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.13.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = { version = "0.4.4" }
